Fixed layout bug

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -99,7 +99,7 @@ h2 {
 }
 
 #lecture-add{
-  margin: 0px;
+  margin: 0;
   padding: 20px;
   border-radius: 0;
   float: right;
